--- a/style.css
+++ b/style.css
@@ -34,3 +34,10 @@
   color: #f53192;
   box-shadow: 0 5px 10px rgba(255, 26, 26, 0.24);
  }
+
+.song-img{
+  width: 220px;
+  border-radius: 50%;
+  border: 8px solid #fff;
+  box-shadow: 0 10px 60px rgba(255, 26, 26, 0.25);
+}
