--- a/style.css
+++ b/style.css
@@ -52,3 +52,14 @@
   font-size: 14px;
   color: #333;
 }
+#progress{
+  /* -webkit-appearance: none; */
+  -webkit-appearance: none;
+  appearance: none; 
+  width: 100%;
+  height: 6px;
+  background: #f53192;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 40px 0;
+}
